# AACTester

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/furtiveops/com/aactester/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: aac_enc.cpp
app/src/main/java/furtiveops/com/aactester/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/furtiveops/com/aactester/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
